# pygemini

./: .env  LICENSE  README.md  pyproject.toml  test_function.py  utils.py
genimi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/: __init__.py  genimi.py
